--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "http-server-react-native": "0.0.2",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
